# KeepTower

./: .gitignore  ACCOUNT_GROUPS_STATUS.md  AUTOMATIC_BUILD_SYSTEM.md  CHANGELOG.md  CI_CD_READINESS.md  CI_CD_UPDATES.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CODE_REVIEW_2025-12-22.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_SUMMARY.md  DEBUG_SESSION_2026-01-17.md  Doxyfile  FINAL_STATUS_REPORT.md  FIPS_COMPLIANCE.md  FIPS_DOCUMENTATION_SUMMARY.md  FIPS_MIGRATION_COMPLETE.md  FIPS_SETUP_GUIDE.md  FUTURE_IMPROVEMENTS_IMPLEMENTATION.md  INSTALL.md  LUKS_ARCHITECTURE_UPDATE.md  MANUAL_TEST_PREFERENCES_REFACTOR.md  MANUAL_TEST_UNDO_REDO.md  MULTIUSER_AUDIT_REPORT.md  MULTIUSER_DESIGN_FINAL.md  MULTIUSER_IMPLEMENTATION_PLAN.md  MULTIUSER_SPECIFICATION.md  OPENSSL_35_MIGRATION.md  PHASE1_VAULT_CRYPTO_SERVICE_COMPLETE.md  PHASE2_FIPS_IMPLEMENTATION.md  PHASE3_CODE_REVIEW.md  PHASE4_CODE_REVIEW.md  PHASE4_CONFIGURATION_UI.md  PHASE4_IMPLEMENTATION.md  PHASE5_CODE_REVIEW.md  PHASE5_IMPLEMENTATION.md  PHASE6_7_CODE_REVIEW.md  PHASE7_IMPLEMENTATION.md  PHASE_4_IMPLEMENTATION_COMPLETE.md  PREFERENCES_C++23_IMPROVEMENTS.md  (+32 more)
data/: com.example.keeptower.appdata.xml.in  com.example.keeptower.desktop.in  com.example.keeptower.gschema.xml  com.tjdeveng.keeptower.appdata.xml.in  com.tjdeveng.keeptower.desktop.in  com.tjdeveng.keeptower.gschema.xml  gschemas.compiled  meson.build
data/icons/: meson.build
resources/: gresource.xml  help.gresource.xml  meson.build
resources/help/: .gitignore  00-home.html  01-getting-started.html  02-installation.html  03-user-guide.html  04-faq.html  05-security.html  README.html  SECURITY_BEST_PRACTICES.html  YUBIKEY_FIPS_SETUP.html  template.html
resources/help/css/: help-style.css
resources/styles/: message-colors.css
src/: keeptower.rc.in  main.cc  meson.build  record.proto
src/application/: Application.cc  Application.h
src/core/: CommonPasswords.h  KeyWrapping.cc  KeyWrapping.h  MultiUserTypes.cc  MultiUserTypes.h  MultiUserTypesSerDe.cc  MultiUserTypesSerDeDetail.h  PasswordHistory.cc  PasswordHistory.h  ReedSolomon.cc  ReedSolomon.h  VaultBoundaryTypes.h  VaultError.h  VaultFormatV2.cc  VaultFormatV2.h  VaultManager.cc  VaultManager.h  VaultManagerV2.cc  VaultRuntimePreferences.h  YubiKeyManager.cc
src/core/commands/: AccountCommands.h  Command.h  UndoManager.h
src/core/controllers/: VaultCreationOrchestrator.cc  VaultCreationOrchestrator.h
src/core/crypto/: FipsProviderManager.cc  FipsProviderManager.h  VaultCrypto.cc  VaultCrypto.h
src/core/format/: VaultFormat.cc  VaultFormat.h
src/core/io/: VaultIO.cc  VaultIO.h
src/core/managers/: AccountManager.cc  AccountManager.h  GroupManager.cc  GroupManager.h  YubiKeyAlgorithm.h  YubiKeyManager.cc  YubiKeyManager.h  YubiKeyManager_ykpers_old.cc
src/core/repositories/: AccountRepository.cc  AccountRepository.h  GroupRepository.cc  GroupRepository.h  IAccountRepository.h  IGroupRepository.h
src/core/serialization/: VaultSerialization.cc  VaultSerialization.h
src/core/services/: AccountSaveService.cc  AccountSaveService.h  AccountService.cc  AccountService.h  GroupService.cc  GroupService.h  IAccountService.h  IGroupService.h  IVaultYubiKeyService.h  KekDerivationService.cc  KekDerivationService.h  KekDerivationSettingsAdapter.cc  KekDerivationSettingsAdapter.h  KeySlotManager.cc  KeySlotManager.h  PasswordManagementService.cc  PasswordManagementService.h  SecurityPolicyService.cc  SecurityPolicyService.h  UserProvisioningService.cc  UserProvisioningService.h  UsernameHashService.cc  UsernameHashService.h  V2AuthService.cc  V2AuthService.h  VaultBackupPolicy.cc  VaultBackupPolicy.h  VaultCryptoService.cc  VaultCryptoService.h  VaultDataService.cc  VaultDataService.h  VaultFileService.cc  VaultFileService.h  VaultYubiKeyService.cc  VaultYubiKeyService.h  YubiKeyEnrollmentService.cc  YubiKeyEnrollmentService.h
src/lib/backup/: VaultBackupPolicy.cc  VaultBackupPolicy.h
src/lib/crypto/: KekDerivationService.cc  KekDerivationService.h  KeyWrapping.cc  KeyWrapping.h  UsernameHashService.cc  UsernameHashService.h  VaultCrypto.cc  VaultCrypto.h  VaultCryptoService.cc  VaultCryptoService.h
src/lib/fec/: ReedSolomon.cc  ReedSolomon.h
src/lib/fips/: FipsProviderManager.cc  FipsProviderManager.h
src/lib/storage/: VaultIO.cc  VaultIO.h
src/lib/vaultformat/: VaultFormatV2.cc  VaultFormatV2.h  VaultSerialization.cc  VaultSerialization.h
src/lib/yubikey/: YubiKeyAlgorithm.h  YubiKeyManager.cc  YubiKeyManager.h  YubiKeyManager_ykpers_old.cc
src/src/: record.pb.cc  record.pb.h
src/ui/controllers/: AccountViewController.cc  AccountViewController.h  AutoLockManager.cc  AutoLockManager.h  (+6 more)
src/utils/: Cpp23Compat.h  FileDialogExtension.h  ImportExport.cc  ImportExport.h  Log.h  PasswordGenerator.cc  PasswordGenerator.h  SecureMemory.h  SettingsValidator.h  StringHelpers.h
tests/: meson.build  test_account_detail_widget.cc  test_account_groups.cc  test_account_manager.cc  test_account_repository.cc  test_account_save_service.cc  test_account_service.cc  test_account_tree_widget.cc  test_account_view_controller.cc  test_auto_lock_manager.cc  test_clipboard_manager.cc  test_fec_preferences.cc  test_file_dialog_extension.cc  test_fips_mode.cc  test_fuzzy_match.cc  test_group_manager.cc  test_group_repository.cc  test_group_service.cc  test_import_export_1pif.cc  test_import_export_common.cc  test_import_export_csv.cc  test_import_export_keepass_xml.cc  test_input_validation.cc  test_kek_derivation.cc  test_key_slot_manager.cc  test_key_wrapping.cc  test_memory_locking.cc  test_migration_manual.cc  test_multiuser.cc  test_password_generator.cc  test_password_history.cc  test_password_validation.cc  test_preferences_presenter.cc  test_reed_solomon.cc  test_search_controller.cc  test_secure_memory.cc  test_security_features.cc  test_settings_validator.cc  test_theme_controller.cc  test_ui_features.cc  (+31 more)
tests/data/: performance_baseline.json
tests/manual/: README.md  minimal_signal_test.cc  test_auto_build.sh  test_fips_basic.cc  test_lock_dialog.sh  test_preferences.sh
tests/src/: record.pb.cc
(+264 files in other folders)
